[package]
name = "rtp"
version = "0.2.9"
authors = ["Rain Liu <yliu@webrtc.rs>", "Michael Uti <utimichael9@gmail.com>"]
edition = "2018"
description = "A pure Rust implementation of RTP"
license = "MIT"
documentation = "https://docs.rs/rtp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { package = "webrtc-util", version = "0.2.4", default-features = false, features = ["marshal"] }
bytes = "1"
rand = "0.8.0"
thiserror = "1.0.25"
anyhow = "1.0.41"

[dev-dependencies]
chrono = "0.4.7"
criterion = "0.3"

[[bench]]
name = "packet_bench"
harness = false
