[package]
name = "rtp"
version = "0.6.1"
authors = ["Rain Liu <yliu@webrtc.rs>", "Michael Uti <utimichael9@gmail.com>"]
edition = "2018"
description = "A pure Rust implementation of RTP"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtp"

[dependencies]
util = { package = "webrtc-util", version = "0.5.0", default-features = false, features = ["marshal"] }
bytes = "1.1.0"
rand = "0.8.4"
thiserror = "1.0"
async-trait = "0.1.51"

[dev-dependencies]
chrono = "0.4.19"
criterion = "0.3.5"
tokio = { version = "1.12.0", features = ["full"] }
tokio-test = "0.4.2"

[[bench]]
name = "packet_bench"
harness = false
