[package]
name = "webrtc-sctp"
version = "0.4.1"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "A pure Rust implementation of SCTP"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/webrtc-sctp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/sctp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { package = "webrtc-util", version = "0.5.0", default-features = false, features = ["conn"] }
tokio = { version = "1.12.0", features = ["full"] }
bytes = "1"
rand = "0.8.0"
crc = "2.0.0"
async-trait = "0.1"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
lazy_static = "1.4"
env_logger = "0.9.0"
chrono = "0.4.19"
clap = "2"

[[example]]
name = "ping"
path = "examples/ping.rs"
bench = false

[[example]]
name = "pong"
path = "examples/pong.rs"
bench = false
